fix: add missing Chinese translation keys for recommendationForm and cityComparison
- Add missing fields to recommendationForm.place.fields (priceLevel, noiseLevel, socialAtmosphere, tags)
- Add missing noiseLevels and socialLevels to recommendationForm.place
- Add missing city section to recommendationForm with suggestedHighlights and suggestedTags
- Add missing selectMetrics to cityComparison
- Resolve all Chinese translation key warnings for mobileMenu, places, recommendationForm, cityComparison, cities, and common sections

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -197,7 +197,11 @@
         "description": "描述",
         "descriptionPlaceholder": "描述这个地点的特色...",
         "wifiSpeed": "WiFi速度",
-        "wifiSpeedPlaceholder": "输入WiFi速度（Mbps）"
+        "wifiSpeedPlaceholder": "输入WiFi速度（Mbps）",
+        "priceLevel": "价格等级",
+        "noiseLevel": "噪音等级",
+        "socialAtmosphere": "社交氛围",
+        "tags": "标签"
       },
       "priceLevels": {
         "cheap": "便宜",
@@ -205,6 +209,52 @@
         "moderate": "中等",
         "expensive": "昂贵",
         "veryExpensive": "非常昂贵"
+      },
+      "noiseLevels": {
+        "quiet": "安静",
+        "moderate": "中等",
+        "loud": "嘈杂"
+      },
+      "socialLevels": {
+        "low": "低",
+        "medium": "中等",
+        "high": "高"
+      }
+    },
+    "city": {
+      "suggestedHighlights": {
+        "nomadFriendly": "数字游民友好",
+        "fastWifi": "快速WiFi",
+        "lowCost": "低成本",
+        "visaConvenient": "签证便利",
+        "goodClimate": "气候宜人",
+        "foodRich": "美食丰富",
+        "culturalDiverse": "文化多元",
+        "convenientTransport": "交通便利",
+        "safeLiving": "生活安全",
+        "englishFriendly": "英语友好",
+        "activeCommunity": "活跃社区",
+        "workspaces": "工作空间",
+        "coffeeCulture": "咖啡文化",
+        "outdoorActivities": "户外活动",
+        "nightlife": "夜生活"
+      },
+      "suggestedTags": {
+        "budgetFriendly": "预算友好",
+        "fastWifi": "快速WiFi",
+        "easyVisa": "签证容易",
+        "goodClimate": "气候宜人",
+        "goodFood": "美食丰富",
+        "culturalRich": "文化丰富",
+        "convenientTransport": "交通便利",
+        "safe": "安全",
+        "englishFriendly": "英语友好",
+        "goodCommunity": "社区良好",
+        "workspaces": "工作空间",
+        "coffeeCulture": "咖啡文化",
+        "outdoor": "户外",
+        "nightlife": "夜生活",
+        "shopping": "购物"
       }
     }
   },
@@ -233,7 +283,8 @@
     "dataTable": "数据表格",
     "chartView": "图表视图",
     "addCity": "添加城市",
-    "loadingCities": "正在加载城市..."
+    "loadingCities": "正在加载城市...",
+    "selectMetrics": "选择指标"
   },
     "locationPlaceholder": "输入城市名称",
         "wifiSpeedTest": "WiFi速度测试",
