fix: add missing Chinese translation keys for mobileMenu, places, recommendationForm, and cityComparison

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1643,5 +1643,167 @@
     },
     "organizer": "组织者",
     "rating": "评分"
+  },
+  "mobileMenu": {
+    "title": "菜单",
+    "homeDescription": "发现最适合数字游民的城市",
+    "citiesDescription": "探索全球数字游民城市",
+    "visaGuideDescription": "各国签证申请指南",
+    "taxDescription": "税务策略和计算工具",
+    "toolsDescription": "数字游民必备工具和实用程序",
+    "dashboardDescription": "个人仪表板和设置"
+  },
+  "places": {
+    "title": "游民地点推荐",
+    "description": "发现适合数字游民的绝佳地点",
+    "addPlace": "添加推荐",
+    "evaluate": "评价",
+    "viewDetails": "查看详情",
+    "filterByCategory": "按类别筛选",
+    "all": "全部",
+    "filterByRegion": "按地区筛选",
+    "allRegions": "全部地区",
+    "asia": "亚洲",
+    "europe": "欧洲",
+    "americas": "美洲",
+    "sortBy": "排序方式",
+    "sortByRating": "按评分排序",
+    "sortBySpeed": "按网速排序",
+    "sortByPrice": "按价格排序",
+    "community": "社区",
+    "recommendations": "推荐",
+    "openNow": "现在营业",
+    "outlets": "插座",
+    "seating": "座位",
+    "noise": "噪音",
+    "quickBrowse": "快速浏览"
+  },
+  "recommendationForm": {
+    "place": {
+      "title": "推荐地点",
+      "submitButton": "提交推荐",
+      "suggestedTags": {
+        "quiet": "安静",
+        "fastWifi": "网速快",
+        "goodCoffee": "好咖啡",
+        "reasonablePrice": "价格合理",
+        "convenientLocation": "位置便利",
+        "wellEquipped": "设施完善",
+        "goodCommunity": "社区氛围好",
+        "beautifulView": "风景优美",
+        "goodFood": "美食",
+        "goodService": "服务好",
+        "open24Hours": "24小时营业",
+        "petFriendly": "宠物友好",
+        "latteArt": "拉花艺术",
+        "WiFi快": "WiFi快",
+        "海滩附近": "海滩附近",
+        "河景": "河景",
+        "高端设施": "高端设施",
+        "历史建筑": "历史建筑",
+        "优雅环境": "优雅环境",
+        "价格实惠": "价格实惠",
+        "清迈": "清迈"
+      },
+      "fields": {
+        "name": "名称",
+        "namePlaceholder": "输入地点名称",
+        "category": "类别",
+        "address": "地址",
+        "addressPlaceholder": "输入详细地址",
+        "location": "位置",
+        "locationPlaceholder": "选择城市",
+        "locationHelp": "选择地点所在的城市",
+        "description": "描述",
+        "descriptionPlaceholder": "描述这个地点的特色",
+        "wifiSpeed": "网速",
+        "wifiSpeedPlaceholder": "输入网速（Mbps）",
+        "priceLevel": "价格水平",
+        "noiseLevel": "噪音水平",
+        "socialAtmosphere": "社交氛围",
+        "tags": "标签"
+      },
+      "priceLevels": {
+        "cheap": "便宜",
+        "economical": "经济",
+        "moderate": "中等",
+        "expensive": "昂贵",
+        "veryExpensive": "非常昂贵"
+      },
+      "noiseLevels": {
+        "quiet": "安静",
+        "moderate": "中等",
+        "loud": "嘈杂"
+      },
+      "socialLevels": {
+        "low": "低",
+        "medium": "中等",
+        "high": "高"
+      }
+    },
+    "city": {
+      "suggestedHighlights": {
+        "nomadFriendly": "游民友好",
+        "fastWifi": "网速快",
+        "lowCost": "成本低",
+        "visaConvenient": "签证便利",
+        "goodClimate": "气候宜人",
+        "foodRich": "美食丰富",
+        "culturalDiverse": "文化多元",
+        "convenientTransport": "交通便利",
+        "safeLiving": "生活安全",
+        "englishFriendly": "英语友好",
+        "activeCommunity": "活跃社区",
+        "workspaces": "工作空间",
+        "coffeeCulture": "咖啡文化",
+        "outdoorActivities": "户外活动",
+        "nightlife": "夜生活"
+      },
+      "suggestedTags": {
+        "budgetFriendly": "预算友好",
+        "fastWifi": "网速快",
+        "easyVisa": "签证容易",
+        "goodClimate": "气候好",
+        "goodFood": "美食",
+        "culturalRich": "文化丰富",
+        "convenientTransport": "交通便利",
+        "safe": "安全",
+        "englishFriendly": "英语友好",
+        "goodCommunity": "社区好",
+        "workspaces": "工作空间",
+        "coffeeCulture": "咖啡文化",
+        "outdoor": "户外",
+        "nightlife": "夜生活",
+        "shopping": "购物"
+      }
+    }
+  },
+  "cityComparison": {
+    "title": "城市对比",
+    "metricsSelector": "选择指标",
+    "dataTable": "数据表格",
+    "chartView": "图表视图",
+    "addCity": "添加城市",
+    "loadingCities": "加载城市中...",
+    "defaultExample": "默认示例",
+    "defaultExampleDescription": "选择一些城市开始对比",
+    "startComparing": "开始对比",
+    "addCitiesNow": "立即添加城市",
+    "overallScoreLabel": "综合评分",
+    "overallScoreDescription": "基于多个维度的综合评分",
+    "points": "分",
+    "wifiSpeed": "网速",
+    "averageWifiSpeed": "平均网速",
+    "costOfLiving": "生活成本",
+    "monthlyCostUSD": "月生活成本（美元）",
+    "perMonth": "每月",
+    "visaConvenience": "签证便利性",
+    "stayDays": "停留天数",
+    "days": "天",
+    "climateComfort": "气候舒适度",
+    "climateScoreByLatitude": "基于纬度的气候评分",
+    "socialAtmosphere": "社交氛围",
+    "socialScoreByVisaAndCost": "基于签证和成本的社交评分",
+    "selectMetrics": "选择指标"
   }
 }
