fix: add missing translation keys for Japanese locale (places, cityComparison) and fix Chinese locale structure

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -3629,5 +3629,58 @@
       "loginButton": "ログイン",
       "signupButton": "サインアップ"
     }
+  },
+  "places": {
+    "title": "ノマド向け場所の推奨",
+    "description": "デジタルノマドに最適な場所を発見",
+    "addPlace": "推奨を追加",
+    "evaluate": "評価",
+    "viewDetails": "詳細を見る",
+    "filterByCategory": "カテゴリでフィルター",
+    "all": "すべて",
+    "filterByRegion": "地域でフィルター",
+    "allRegions": "すべての地域",
+    "asia": "アジア",
+    "europe": "ヨーロッパ",
+    "americas": "アメリカ",
+    "sortBy": "並び替え",
+    "sortByRating": "評価で並び替え",
+    "sortBySpeed": "速度で並び替え",
+    "sortByPrice": "価格で並び替え",
+    "community": "コミュニティ",
+    "recommendations": "推奨",
+    "openNow": "現在営業中",
+    "outlets": "コンセント",
+    "seating": "座席",
+    "noise": "騒音",
+    "quickBrowse": "クイックブラウズ"
+  },
+  "cityComparison": {
+    "title": "都市比較",
+    "metricsSelector": "指標を選択",
+    "dataTable": "データテーブル",
+    "chartView": "チャート表示",
+    "addCity": "都市を追加",
+    "loadingCities": "都市を読み込み中...",
+    "defaultExample": "デフォルト例",
+    "defaultExampleDescription": "比較を開始するためにいくつかの都市を選択",
+    "startComparing": "比較を開始",
+    "addCitiesNow": "今すぐ都市を追加",
+    "overallScoreLabel": "総合スコア",
+    "overallScoreDescription": "複数の次元に基づく総合スコア",
+    "points": "ポイント",
+    "wifiSpeed": "WiFi速度",
+    "averageWifiSpeed": "平均WiFi速度",
+    "costOfLiving": "生活費",
+    "monthlyCostUSD": "月額生活費（USD）",
+    "perMonth": "月額",
+    "visaConvenience": "ビザの利便性",
+    "stayDays": "滞在日数",
+    "days": "日",
+    "climateComfort": "気候の快適さ",
+    "climateScoreByLatitude": "緯度に基づく気候スコア",
+    "socialAtmosphere": "社会的雰囲気",
+    "socialScoreByVisaAndCost": "ビザとコストに基づく社会的スコア",
+    "selectMetrics": "指標を選択"
   }
 } 
