feat: translate Chinese content for homepage sections - AI Personalized Recommendations, City Comparison, Nomad Place Recommendations, and common elements

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -49,7 +49,7 @@
     "description": "查找签证信息、税务指导、必备工具，并与全球游民社区建立联系。",
     "hero": {
       "badge": "数字游民必备工具",
-      "title": "发现你的",
+      "title": "发现您的下一个数字游民目的地",
       "titleHighlight": "下一个目的地",
       "description": "实时时间、天气、WiFi速度、签证信息，一切数字游民需要的信息都在这里。让全球旅行变得更简单、更智能。",
       "exploreCities": "探索城市",
@@ -333,7 +333,7 @@
         "nearMe": "📍 附近",
         "topRated": "🔥 热门",
         "new": "最新",
-        "citiesToExplore": "探索城市",
+        "citiesToExplore": "可探索城市",
         "viewAllCities": "查看所有城市",
         "myFavorites": "❤️ 我的收藏",
         "monthlyCost": "月成本",
@@ -679,19 +679,19 @@
     "title": "Menu"
   },
   "places": {
-    "title": "Nomad Place Recommendations",
+    "title": "数字游民地点推荐",
     "subtitle": "Discover amazing places for digital nomads",
     "searchPlaceholder": "Search places...",
-    "addPlace": "Add Recommendation",
-    "evaluate": "Evaluate",
-    "noise": "Low Noise",
-    "seating": "Wide Seating",
-    "outlets": "Many Outlets",
-    "openNow": "Open Now",
-    "community": "Community",
-    "sortByPrice": "Price",
-    "sortBySpeed": "Speed",
-    "sortByRating": "Rating",
+    "addPlace": "添加地点",
+    "evaluate": "评价",
+    "noise": "噪音",
+    "seating": "座位",
+    "outlets": "插座",
+    "openNow": "现在营业",
+    "community": "社区",
+    "sortByPrice": "按价格排序",
+    "sortBySpeed": "按WiFi速度排序",
+    "sortByRating": "按评分排序",
     "filters": {
       "library": "Library",
       "park": "Park",
@@ -791,14 +791,14 @@
       "loginRequired": "Please log in to add places",
       "submitError": "Failed to submit recommendation. Please try again."
     },
-    "americas": "Americas",
-    "europe": "Europe",
-    "asia": "Asia",
-    "allRegions": "All Regions",
-    "filterByRegion": "Filter by region",
-    "all": "All",
-    "filterByCategory": "Filter by category",
-    "viewDetails": "View Details",
+    "americas": "美洲",
+    "europe": "欧洲",
+    "asia": "亚洲",
+    "allRegions": "所有地区",
+    "filterByRegion": "按地区筛选",
+    "all": "全部",
+    "filterByCategory": "按类别筛选",
+    "viewDetails": "查看详情",
     "foundResults": "Found {count} places",
     "viewAll": "View all {count} places",
     "noResults": {
@@ -818,11 +818,7 @@
       "wifiSpeed": "WiFi Speed",
       "title": "Details"
     },
-    "sortBy": {
-      "popular": "Most Popular",
-      "recent": "Most Recent",
-      "rating": "Highest Rating"
-    },
+    "sortBy": "排序方式",
     "categories": {
       "other": "📍 Other",
       "shopping": "🛍 Shopping Center",
@@ -843,9 +839,9 @@
     },
     "reviews": "reviews",
     "recommendationScore": "Recommendation Score",
-    "recommendations": "recommendations",
-    "quickBrowse": "Quick Browse",
-    "description": "Discover the best places for remote work"
+    "recommendations": "推荐",
+    "quickBrowse": "快速浏览",
+    "description": "发现最适合工作和生活的咖啡厅、联合办公空间和其他地点"
   },
   "recommendationForm": {
     "place": {
@@ -1030,17 +1026,17 @@
     "toolTitle": "City Comparison Tool",
     "searchAndSelect": "Search and Select Cities",
     "popularCities": "Popular Cities",
-    "addCitiesNow": "Add Cities Now",
-    "dataTable": "Data Table",
-    "chartView": "Chart View",
+    "addCitiesNow": "立即添加城市",
+    "dataTable": "数据表格",
+    "chartView": "图表视图",
     "copyShareLink": "Copy Share Link",
     "exportChart": "Export Comparison Chart",
     "barChart": "Bar Chart",
     "radarChart": "Radar Chart",
     "exampleCities": "Bali vs Chiang Mai vs Lisbon",
     "clearExample": "Clear Example",
-    "defaultExampleDescription": "Popular city comparison example to quickly see the comparison effect",
-    "defaultExample": "Default Comparison Example",
+    "defaultExampleDescription": "比较热门数字游民城市",
+    "defaultExample": "默认示例",
     "cityInfo": {
       "wifiSpeed": "{speed}Mbps",
       "costPerMonth": "${cost}/month",
@@ -1057,8 +1053,8 @@
     "searchPlaceholder": "Search cities or countries...",
     "selectCitiesTitle": "Select Comparison Cities",
     "recommended": "Recommended",
-    "overallScoreDescription": "Based on comprehensive rating",
-    "overallScoreLabel": "Overall Score",
+    "overallScoreDescription": "基于所有因素的加权评分",
+    "overallScoreLabel": "综合评分",
     "comparisonMetrics": "Comparison Metrics",
     "startComparisonDescription": "Select 2-6 cities for detailed comparison including WiFi speed, cost of living, visa convenience, climate comfort and social atmosphere",
     "startComparisonTitle": "Start City Comparison",
@@ -1066,26 +1062,26 @@
     "selectMetrics": "Select Comparison Metrics",
     "shareComparison": "Share",
     "saveComparison": "Save",
-    "wifiSpeed": "WiFi Speed",
-    "costOfLiving": "Cost of Living",
-    "visaConvenience": "Visa Convenience",
-    "climateComfort": "Climate Comfort",
-    "socialAtmosphere": "Social Atmosphere",
-    "averageWifiSpeed": "Average WiFi download speed",
-    "monthlyCostUSD": "Monthly living cost (USD)",
-    "stayDays": "Days to stay",
-    "climateScoreByLatitude": "Climate score based on latitude",
-    "socialScoreByVisaAndCost": "Social score based on visa type and cost",
-    "points": "points",
-    "days": "days",
-    "perMonth": "/month",
+    "wifiSpeed": "WiFi速度",
+    "costOfLiving": "生活成本",
+    "visaConvenience": "签证便利性",
+    "climateComfort": "气候舒适度",
+    "socialAtmosphere": "社交氛围",
+    "averageWifiSpeed": "平均WiFi速度",
+    "monthlyCostUSD": "月生活成本（美元）",
+    "stayDays": "停留天数",
+    "climateScoreByLatitude": "基于纬度的气候评分",
+    "socialScoreByVisaAndCost": "基于签证和成本的社交评分",
+    "points": "分",
+    "days": "天",
+    "perMonth": "每月",
     "viewMode": {
       "table": "Table",
       "chart": "Chart"
     },
-    "metricsSelector": "Metrics",
+    "metricsSelector": "指标选择器",
     "compareDescription": "Select 2-6 cities for detailed comparison including WiFi speed, cost of living, visa convenience, climate comfort and social atmosphere",
-    "startComparing": "Start Comparing",
+    "startComparing": "开始对比",
     "selectedCities": "Selected {count}/6 cities",
     "advancedFilter": "Advanced Filter",
     "sortBy": "Sort by",
@@ -1100,7 +1096,7 @@
     "startComparison": "Start Comparison",
     "selectCities": "Select 2-6 cities to compare",
     "exportPDF": "Export PDF",
-    "addCity": "Add City",
+    "addCity": "添加城市",
     "error": "Error loading comparison data",
     "loading": "Loading comparison data...",
     "noCitiesSelected": "Please select at least 2 cities to compare",
@@ -1110,31 +1106,31 @@
     "addCityButton": "Add City",
     "select2To4Cities": "Select 2-6 cities to compare",
     "description": "Compare cities side by side",
-    "title": "City Comparison"
+    "title": "城市对比"
   },
   "recommendations": {
-    "algorithmExplanation": "We generate recommendations based on WiFi speed, cost of living, visa days, climate comfort, and social atmosphere.",
-    "priorityIndicator": "Priority Indicator",
+    "algorithmExplanation": "我们的AI算法会分析您的偏好，包括WiFi质量、生活成本、气候舒适度、社交氛围和签证便利性，为您推荐最匹配的城市。",
+    "priorityIndicator": "优先级指示器",
     "priorityLevels": {
-      "low": "Low Priority",
-      "medium": "Medium Priority",
-      "high": "High Priority"
+      "low": "低优先级",
+      "medium": "中等优先级",
+      "high": "高优先级"
     },
-    "instantRecommendations": "Instant Recommendations",
+    "instantRecommendations": "即时推荐",
     "presetDescriptions": {
-      "balanced": "Balanced recommendations",
-      "social": "Social atmosphere priority",
-      "digital": "Work convenience priority",
-      "budget": "Low cost priority"
+      "balanced": "平衡所有因素",
+      "social": "优先考虑社交氛围和社区",
+      "digital": "优先考虑WiFi和基础设施",
+      "budget": "优先考虑低成本城市"
     },
     "presets": {
-      "balanced": "Balanced",
-      "social": "Social Focused",
-      "digital": "Digital Nomad",
-      "budget": "Budget Focused"
+      "balanced": "平衡型",
+      "social": "社交导向",
+      "digital": "数字游民",
+      "budget": "预算友好"
     },
-    "quickPresets": "Quick preference presets:",
-    "setPreferences": "Set your preferences to get personalized city recommendations",
+    "quickPresets": "快速预设",
+    "setPreferences": "设置偏好",
     "viewDetails": "View Details",
     "days": "days",
     "stayDays": "Stay Days",
@@ -1143,11 +1139,11 @@
     "wifiSpeed": "WiFi Speed",
     "matchScore": "Match Score",
     "recommendedCities": "Recommended Cities for You",
-    "preferences": "Your Preferences",
+    "preferences": "偏好设置",
     "generating": "Generating...",
-    "generate": "Generate Recommendations",
-    "description": "Generate customized city recommendations based on your preferences",
-    "title": "AI Personalized Recommendations"
+    "generate": "生成推荐",
+    "description": "基于您的偏好和需求，为您推荐最适合的数字游民目的地",
+    "title": "AI个性化推荐"
   },
   "localNomads": {
     "userRankings": "User Rankings",
