feat: rename Real-time Data to Real-time Online in local-nomads page

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1399,7 +1399,7 @@
     "searchPlaceholder": "Search nomads by name, profession, or location...",
     "searchNomads": "Search Nomads",
     "searchAndConnect": "Search and Connect",
-    "realtimeData": "Real-time Data",
+    "realtimeData": "Real-time Online",
     "stats": {
       "days": "days",
       "communityRating": "Community Rating",
