Fix translation keys and API errors
- Add missing cityDetail translation keys to all language files
- Fix Places API with fallback data support
- Fix PlaceDetailPage error state definition
- Update TravelTables API integration
- Fix submitted_by field type definition
- Add sample places data insertion script

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,4 +1,4 @@
-{
+   {
   "title": "ノマド情報",
   "subtitle": "デジタルノマドの包括的ガイド",
   "description": "ビザ、税金、住宅、保険などのデジタルノマド情報",
@@ -2313,7 +2313,8 @@
     "costLevel": {
       "low": "低",
       "moderate": "中程度",
-      "high": "高"
+      "high": "高",
+      "affordable": "手頃"
     },
     "wifiSpeed": "WiFi速度",
     "wifiLevel": {
