--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -174,6 +174,23 @@
       "fastWifi": "Fast and stable WiFi",
       "lowCost": "Relatively low cost of living"
     },
+    "costLevel": {
+      "affordable": "Affordable"
+    },
+    "communityActivity": {
+      "low": "Low"
+    },
+    "pros": {
+      "affordableCost": "Affordable cost of living",
+      "goodWifi": "Good WiFi infrastructure",
+      "longVisa": "Long-term visa options",
+      "nomadFriendly": "Nomad-friendly environment"
+    },
+    "cons": {
+      "languageBarrier": "Language barrier",
+      "weatherIssues": "Weather issues",
+      "transportation": "Transportation challenges"
+    },
     "vote": "Vote",
     "error": "Error",
     "loading": "Loading...",
