Transform city detail page into community-driven nomad hub
Major improvements:
- Fix Pros & Cons display bug with dynamic content generation
- Add CostBreakdownChart component with visual cost analysis
- Add CommunityActivity component showing current nomads and meetups
- Add CityMap component with recommended places and navigation
- Enhance Pros & Cons with voting system and user contributions
- Add comprehensive translation keys for new features
- Improve page layout with better information hierarchy

Features added:
- Monthly cost breakdown (accommodation, food, transport, entertainment)
- Real-time community data (nomads currently in city, meetups)
- Interactive map with recommended places (coworking, cafes, accommodation)
- Enhanced Pros & Cons with descriptions and voting
- Better visual design with cards and interactive elements

This transforms the city detail page from a simple data display into a comprehensive community-driven nomad information hub.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -189,7 +189,67 @@
     "cons": {
       "languageBarrier": "Language barrier",
       "weatherIssues": "Weather issues",
-      "transportation": "Transportation challenges"
+      "transportation": "Transportation challenges",
+      "highCost": "High cost of living",
+      "slowWifi": "Slow WiFi speeds",
+      "shortVisa": "Short visa duration",
+      "languageBarrierDesc": "Limited English proficiency in some areas",
+      "weatherIssuesDesc": "Unpredictable weather patterns",
+      "transportationDesc": "Limited public transportation options",
+      "highCostDesc": "Expensive compared to other nomad destinations",
+      "slowWifiDesc": "Internet speeds below 25 Mbps",
+      "shortVisaDesc": "Visa-free stay less than 30 days"
+    },
+    "pros": {
+      "affordableCost": "Affordable cost of living",
+      "goodWifi": "Good WiFi infrastructure",
+      "longVisa": "Long-term visa options",
+      "nomadFriendly": "Nomad-friendly environment",
+      "goodWeather": "Great weather year-round",
+      "affordableCostDesc": "Monthly expenses under $2000",
+      "goodWifiDesc": "Reliable internet speeds over 50 Mbps",
+      "longVisaDesc": "Visa-free stay over 90 days",
+      "nomadFriendlyDesc": "High overall rating from digital nomads",
+      "goodWeatherDesc": "Pleasant climate for remote work"
+    },
+    "addPro": "Add a pro",
+    "addCon": "Add a con",
+    "costBreakdown": {
+      "title": "Monthly Cost Breakdown",
+      "perMonth": "per month",
+      "ofTotal": "of total",
+      "accommodation": "Accommodation",
+      "food": "Food & Dining",
+      "transportation": "Transportation",
+      "entertainment": "Entertainment",
+      "trend": "Cost Trend",
+      "trendDescription": "Cost of living in {city}, {country} has been stable over the past 6 months"
+    },
+    "community": {
+      "title": "Nomad Community",
+      "thisWeek": "this week",
+      "nomadsCurrently": "nomads currently here",
+      "inCity": "in {city}",
+      "recentNomads": "Recent Nomads",
+      "viewAllNomads": "View all nomads",
+      "thisWeekMeetups": "This Week's Meetups",
+      "attendees": "attendees",
+      "viewAllMeetups": "View all meetups",
+      "joinCommunity": "Join Community"
+    },
+    "map": {
+      "title": "City Map & Places",
+      "openInMaps": "Open in Maps",
+      "recommendedPlaces": "Recommended Places",
+      "directions": "Directions",
+      "getDirections": "Get Directions",
+      "save": "Save",
+      "navigate": "Navigate",
+      "saveLocation": "Save Location",
+      "coworking": "Coworking",
+      "cafe": "Cafe",
+      "accommodation": "Accommodation",
+      "transport": "Transport"
     },
     "vote": "Vote",
     "error": "Error",
