Add advanced city detail page enhancements
New features added:
- Breadcrumb navigation for better UX
- City image gallery with photo carousel and user uploads
- Related cities recommendation system based on similarity
- Enhanced visual design with better information hierarchy

Components created:
- Breadcrumb: Navigation breadcrumb with icons and links
- CityImageGallery: Photo carousel with metadata and interactions
- RelatedCities: AI-powered city recommendations with similarity scores

Improvements:
- Better page navigation and user orientation
- Visual city representation through photos
- Discovery of similar cities for nomads
- Enhanced user engagement and time on page
- Complete translation support for new features

This completes the transformation from basic city info to comprehensive nomad hub.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -251,6 +251,19 @@
       "accommodation": "Accommodation",
       "transport": "Transport"
     },
+    "gallery": {
+      "title": "City Photos",
+      "userUploaded": "User Upload",
+      "likes": "likes",
+      "views": "views",
+      "uploadPhoto": "Upload Photo"
+    },
+    "relatedCities": {
+      "title": "Related Cities",
+      "basedOnSimilarity": "Based on similarity",
+      "exploreAllCities": "Explore all cities"
+    },
+    "nomadCities": "Nomad Cities",
     "vote": "Vote",
     "error": "Error",
     "loading": "Loading...",
