Clean up mock data for production environment
Major changes:
1. Remove fake user data from meetupApi.ts
   - getMockUsers() now returns empty array
   - Prevents misleading users with fake online status

2. Unify city data source in CityRanking.tsx
   - Remove mock cities data
   - Use real Supabase data for all users
   - Sort by rating and limit results

3. Add production data strategy documentation
   - Created PRODUCTION_DATA_STRATEGY.md
   - Outlines mock data cleanup plan
   - Provides data migration recommendations

4. Create seed data script
   - Added database/seed_places.sql
   - Contains curated high-quality place data
   - Ready for production database seeding

5. Fix translation keys
   - Resolved duplicate costLevel and costBreakdown keys
   - Added missing 'expensive' cost level option
   - Cleaned up en.json structure

This addresses the production environment concerns about mock data
and provides a clear path forward for real data management.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -175,6 +175,10 @@
       "lowCost": "Relatively low cost of living"
     },
     "costLevel": {
+      "low": "Low",
+      "moderate": "Moderate", 
+      "high": "High",
+      "expensive": "Expensive",
       "affordable": "Affordable"
     },
     "communityActivity": {
@@ -281,11 +285,6 @@
     "userReviews": "User Reviews",
     "other": "Other",
     "quickStats": "Quick Stats",
-    "costLevel": {
-      "low": "Low",
-      "moderate": "Moderate",
-      "high": "High"
-    },
     "wifiSpeed": "WiFi Speed",
     "wifiLevel": {
       "poor": "Poor",
@@ -315,7 +314,6 @@
     "transportation": "Transportation",
     "food": "Food",
     "accommodation": "Accommodation",
-    "costBreakdown": "Monthly Cost Breakdown",
     "stayDays": "Stay Days",
     "convenienceScore": "Convenience Score",
     "overallScore": "Overall Score",
